--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <h3>Ingredients</h3>
+  <% f.fields_for :ingredients do |ingredient| %>
+  <li>
+  Name: <%= ingredient.text_field :name %> <br>
+    Quantity <%= ingredient.text_field :quantity %> <br>
+  </li>
+  <% end %>
+  <br>
+  <%= f.submit %>
 <% end %>
